Add registration form

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,6 @@
 {
+  "en": "English",
+  "ru": "Русский",
   "language": "English",
   "selectLanguage": "Choose a language that you speak",
   "signIn": "Sign In",
@@ -6,14 +8,14 @@
   "createAccount": "Create Account",
   "logIn": "Log In",
   "OR": "OR",
-  "logInWithGoogle": "Log In with Google",
-  "logInWithFacebook": "Log In with Facebook",
-  "logInWithAppleID": "Log In with Apple ID",
+  "logInWith": "Log In with",
+  "signUpWith": "Sign up with",
   "iAccept": "I accept",
   "termsOfUse": "Terms of Use",
   "and": "and",
   "privacyPolicy": "Privacy Policy",
   "doNotHaveAnAccount": "Do not have an account?",
+  "alreadyHaveAnAccount": "Already have an account?",
   "createIt": "Create one!",
 
   "invalidEmail": "Invalid email",
