--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,4 +1,6 @@
 {
+  "en": "English",
+  "ru": "Русский",
   "language": "Русский",
   "selectLanguage": "Выберете язык на котором вы говорите",
   "signIn": "Войти в систему",
@@ -13,7 +15,9 @@
   "and": "и",
   "privacyPolicy": "Политику конфиденциальности",
   "doNotHaveAnAccount": "У вас нет учетной записи?",
+  "alreadyHaveAnAccount": "У вас уже есть аккаунт?",
   "createIt": "Создайте её!",
+
   "invalidEmail": "Недопустимый адрес электронной почты",
   "required": "Обязательное поле",
   "passwordMin": "Короткий пароль",
