--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -21,9 +21,17 @@
   "topicsThatYouInterestIn": "Темы, которые вас интересуют:",
   "youCanChangeAnytime": "(вы можете изменить в любое время)",
   "nextStep": "Следующий шаг",
+  "pleaseSelectAtLeastOneTopic": "Пожалуйста, выберете хотя бы одну тему",
 
   "invalidEmail": "Недопустимый адрес электронной почты",
   "required": "Обязательное поле",
   "passwordMin": "Короткий пароль",
-  "acceptTerms": "Примите Условия использования и политику конфиденциальности"
+  "acceptTerms": "Примите Условия использования и политику конфиденциальности",
+
+  "male": "Мужчина",
+  "female": "Женщина",
+  "other": "Другой",
+  "patient": "Пациент",
+  "doctor": "Доктор",
+  "admin": "Администратор"
 }
