professional speacker page

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -41,7 +41,7 @@
   "chatRooms": "Chat rooms",
   "friendList": "Friend list",
   "therpiests": "Therpiests",
-  "profSpeakers": "Professional speakets",
+  "profSpeakers": "Professional speakers",
   "calendar": "Calendar",
   "payments": "Payments",
   "settings": "Settings",
